--- a/src/main/resources/templates/adminpage/headerNav.html
+++ b/src/main/resources/templates/adminpage/headerNav.html
@@ -5,7 +5,7 @@
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">HOME</a>
+        <a class="navbar-brand" href="/adminpage/management.do">HOME</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
