--- a/src/main/resources/templates/adminpage/reservationDetailManagement.html
+++ b/src/main/resources/templates/adminpage/reservationDetailManagement.html
@@ -5,7 +5,7 @@
     <title>예약 목록</title>
 </head>
 <body>
-<header th:include="/headerNav"></header>
+<header th:include="/adminpage/headerNav"></header>
 <main class="container mx-auto mt-5" style="max-width: 80%;">
     <h1>정욱채님의 예약 현황</h1>
     <h3>진행중인 예약 목록</h3>
