아이디 찾기(미완)

--- a/src/main/resources/templates/signup/joinPage3.html
+++ b/src/main/resources/templates/signup/joinPage3.html
@@ -28,7 +28,7 @@
 				
 				<br>
 				<a class="button5" href="/">홈으로</a> 
-				<a href="#" class="button6">로그인</a>
+				<a href="/login/loginPage.do" class="button6">로그인</a>
 	
 		</div>
 
