--- a/src/main/resources/templates/login/findUserId.html
+++ b/src/main/resources/templates/login/findUserId.html
@@ -12,13 +12,13 @@
 			<div>
 				<p>고객정보와 일치하는 아이디</p>
 					<p class="d-flex justify-content-center m-5">
-						<strong class="fs-3">고객아이디값</strong>
+						<strong class="fs-3"></strong>
 					</p>	
 			</div>
 		</div>	
 		<div class="d-flex justify-content-center mt-5 ">
-			<button type="button" class="btn btn-primary btn-lg m-2">로그인 하기</button>
-			<button type="button" class="btn btn-secondary btn-lg m-2">비밀번호 찾기</button>
+			<a href="/login/loginPage.do" type="button" class="btn btn-primary btn-lg m-2">로그인 하기</a>
+			<a href="/login/findPassword.do" type="button" class="btn btn-secondary btn-lg m-2">비밀번호 찾기</a>
 		</div>
 	</main>
 	
