--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -25,7 +25,7 @@
 			  <button type="submit" class="btn btn-primary mt-4">로그인</button>
 		  </div>
 		  <div class="d-flex justify-content-center mt-3">
-		  	<a class="btn btn" href="#">회원가입</a><div class="vr"></div><a class="btn btn" href="/login/findId.do">아이디 찾기</a><div class="vr"></div><a class="btn btn" href="/login/findPassword.do">비밀번호 찾기</a>
+		  	<a class="btn btn" href="/signup/joinPage.do">회원가입</a><div class="vr"></div><a class="btn btn" href="/login/findId.do">아이디 찾기</a><div class="vr"></div><a class="btn btn" href="/login/findPassword.do">비밀번호 찾기</a>
 		  </div>
 		</form>
 	</main>
