--- a/src/main/resources/templates/adminpage/loginpage.html
+++ b/src/main/resources/templates/adminpage/loginpage.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>관리자 로그인 페이지</title>
 <style>
 	body {
 	margin: 0;
 	}
+	h1{
+	margin: 25px;
+	}
 	.box{
-	width: 300px;
+	width: 400px;
+	height: 200px;
 	border-radius: 5px;
 	background-color: #eeeff1;
 	padding: 20px;
@@ -31,6 +35,10 @@
 	border: none;
 	width: 100%;
 	}
+	.box3:hover {
+	cursor: pointer;
+	background-color: rgb(135, 170, 190);
+	}
 	.links{
 	text-align: center;
 	margin: 30px;
@@ -38,6 +46,7 @@
 	.links a {
 	text-decoration: none;
 	font-size: 12px;
+	color: black;
 	}
 </style>
 </head>
@@ -45,9 +54,9 @@
 	<main>
 	<h1>관리자 로그인</h1>
 		<div class="box">
-			<form>
-				<input class="box2" type="text" placeholder="아이디를 입력하세요">
-				<input class="box2" type="password" placeholder="비밀번호를 입력하세요">
+			<form action="/adminpage/loginpage.do" method="post">
+				<input class="box2" type="text" name="adminId" id="inputAdminId" placeholder="아이디를 입력하세요">
+				<input class="box2" type="password" name="adminPw" id="inputAdminPw" placeholder="비밀번호를 입력하세요">
 				<input class="box3" type="submit" value="로그인">
 			</form>
 			<div class="links">
