--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -153,8 +153,7 @@
 								</a>
 								<div>
 									<div id="p_info_wrap" class="p_info_wrap">
-										<div class="info-top">
-										</div>
+										<div class="info-top"></div>
 										<div class="info_detail">
 											<table>
 												<tr class="detail_li">
@@ -251,7 +250,12 @@
 					</div>
 				</form>
 			</div>
-
+			<div class="pet_check">
+				<h3>반려동물과 함께 여행가시나요?</h3>
+				<ul class="ul_dot">
+					<li>나의 반려동물 이름을 입력하시면 출발 당일 반려동물용 기념 탑승권을 발급해드립니다.</li>
+				</ul>
+			</div>
 			<div class="notice_wrap on">
 				<a class="tit" th:onclick="toggle(this)">
 					<span>알아두세요!</span>
