인증번호 보내기

--- a/src/main/resources/templates/login/findId.html
+++ b/src/main/resources/templates/login/findId.html
@@ -10,7 +10,7 @@
 	<main class="container mx-auto" style="max-width: 500px">
 	<h1 class="d-flex justify-content-center mt-5">아이디 찾기</h1>
 		<!-- action -->
-		<form name="findIdForm" action="/login/findId.do" method="post" class="mt-5">
+		<form id="findIdForm" name="findIdForm" action="/login/findId.do" method="post" class="mt-5">
 			<div class="input-group input-group-lg mb-3">
 				<span class="input-group-text" id="inputName">이름</span>
 				<input name="ctName" type="text" class="form-control" placeholder="이름을 입력하세요" id="inputName">
