--- a/src/main/resources/templates/reservation/baggage.html
+++ b/src/main/resources/templates/reservation/baggage.html
@@ -73,26 +73,82 @@
 				<!-- Slider main container -->
 				<div class="swiper2">
 					<!-- Additional required wrapper -->
-					<div class="swiper-wrapper">
-						<!-- Slides -->
-						<div class="swiper-slide">Slide 1</div>
-						<div class="swiper-slide">Slide 2</div>
-						<div class="swiper-slide">Slide 3</div>
-						...
+					<div id="secondSwiper" class="sel_passenger_slide swiper-container">
+						<ul class="swiper-wrapper">
+							<li class="swiper-slide">
+								<div class="p_box">
+									<i class="num">1</i>
+									<div class="name">
+										<p class="first">박</p>
+										<p class="last">소현</p>
+									</div>
+									<div class="add_price">
+										<p>15kg</p>
+										<p>KRW 0</p>
+									</div>
+								</div>
+							</li>
+							<li class="swiper-slide">
+								<div class="p_box">
+									<i class="num">2</i>
+									<div class="name">
+										<p class="first">곰</p>
+										<p class="last">수이</p>
+									</div>
+									<div class="add_price">
+										<p>15kg</p>
+										<p>KRW 0</p>
+									</div>
+								</div>
+							</li>
+							<li class="swiper-slide">
+								<div class="p_box">
+									<i class="num">3</i>
+									<div class="name">
+										<p class="first">박</p>
+										<p class="last">소현</p>
+									</div>
+									<div class="add_price">
+										<p>15kg</p>
+										<p>KRW 0</p>
+									</div>
+								</div>
+							</li>
+						</ul>
 					</div>
-					<!-- If we need pagination -->
-					<div class="swiper-pagination"></div>
-
-					<!-- If we need navigation buttons -->
-					<div class="swiper-button-prev"></div>
-					<div class="swiper-button-next"></div>
-
+					<a class="btn_slide_prev">이전</a>
+					<a class="btn_slide_next">다음</a>
+				</div>
+			</div>
+			<div class="baggage_area">
+				<div class="range_slider">
+					<div class="range_slider_info">
+						<dl class="weight">
+							<dt>
+								<span class="blind">선택한 수하물 무게</span>
+							</dt>
+							<dd>
+								<span>15KG</span>
+							</dd>
+						</dl>
+						<dl class="price">
+							<dt>
+								<span>KRW</span>
+							</dt>
+							<dd>
+								<span>0</span>
+							</dd>
+						</dl>
+					</div>
+					
 				</div>
 			</div>
 		</div>
 	</div>
 	<footer id="footer" th:include="/footerNav"></footer>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<script src="jquery.min.js"></script>
+	<script src=https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.0.0/rangeslider.min.js></script>
 	<script src="/js/reservation/baggage.js"></script>
 </body>
 </html>
