--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -6,7 +6,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<header th:include="/headerNav"></header>
 	<div class="container">
 		<div class="head">
 			<h2>항공권 예매</h2>
@@ -18,7 +17,7 @@
 			</div>
 
 			<div class="passenger_info">
-				<form action="">
+				<form action="/passenger/pList.do" method="post">
 					<div class="p_info-list">
 						<ul>
 							<li class="p_list on">
@@ -272,8 +271,11 @@
 			</div>
 		</div>
 	</div>
-
+	<footer id="r_footer" th:include="/reservation/r_footer"></footer>
 	<footer id="footer" th:include="/footerNav"></footer>
+
+
+
 	<script src="/js/reservation/passenger_list.js"></script>
 </body>
 </html>
