Air flight mapper added

--- a/src/main/resources/templates/reservation/reservationSearch.html
+++ b/src/main/resources/templates/reservation/reservationSearch.html
@@ -2,6 +2,7 @@
 
 <html lang="ko-KR">
 <head>
+    <title>[JB항공] 항공권 예매</title>
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <link href="/css/reservation/reservationSearch.css" rel="stylesheet">
@@ -40,13 +41,10 @@
 
         <!-- 구간선택 -->
         <div class="sel_service_section">
-
             <div class="service_section_wrap service_section_wrap--simple">
-
                 <!-- 구간선택 슬라이드 -->
                 <div class="service_section_slide swiper-container swiper-container-horizontal">
-
-                    <ul class="swiper-wrapper" id="routeSlider">
+                    <ul class="swiper-wrapper" id="routeSlider" >
                         <li class="swiper-slide swiper-slide-duplicate swiper-slide-active swiper-slide-duplicate-prev"
                             id="route_1">
                             <!-- 구간선택 박스 -->
@@ -83,7 +81,6 @@
                         재검색
                     </button>
                 </div>
-                <!--// 여정 재검색 -->
                 <div class="modal fade" id="planResearchModal" tabindex="-1" aria-labelledby="planResearchModal"
                      aria-hidden="true">
                     <div class="modal-dialog">
@@ -185,6 +182,7 @@
                         </div>
                     </div>
                 </div>
+                <!--// 여정 재검색 -->
 
                 <!-- 슬라이드 버튼 -->
                 <a class="btn_slide_prev" href="#">이전</a>
