회원가입 (ID,PW 유효성 검사)

--- a/src/main/resources/templates/signup/joinPage.html
+++ b/src/main/resources/templates/signup/joinPage.html
@@ -141,7 +141,8 @@
 		<b style="font-size: 14px; color: #007dcd;">JB항공과 이용자간에 발생한 서비스 이용에 관한 분쟁에 대하여는 대한민국 법을 적용하며, 본 분쟁으로 인한 소는 민사소송법상의 관할법원에 제기합니다.</b><br>
 		부 칙 1. (시행일) 본 약관은 2016년 1월 1일부터 시행됩니다.<br>
 	</div>
-			  <input class="form-check-input"type="checkbox" name="agreement" id="termsOfService" value="termsOfService" required />&nbsp 위의 이용약관에 동의합니다.
+			  <input class="form-check-input"type="checkbox" name="agreement" id="termsOfService" value="termsOfService" required />
+			 <label for="termsOfService"> &nbsp 위의 이용약관에 동의합니다.</label>
 			</div>
 			<br>
 			 <div class="input__check">
@@ -173,7 +174,8 @@
 		<br><b>마. 동의 거부 권리 및 동의 거부에 따른 불이익 </b><br>
 		위 개인정보의 수집 및 이용에 대한 동의를 거부할 수 있으나, 동의를 거부할 경우 회원 가입이 제한됩니다.<br>
 	</div>
-			<input class="form-check-input" type="checkbox" name="agreement" id="privacyPolicy" value="privacyPolicy" required />&nbsp 위의 개인정보 수집 및 이용에 대한 안내에 동의합니다.
+			<input class="form-check-input" type="checkbox" name="agreement" id="privacyPolicy" value="privacyPolicy" required />
+			<label for="privacyPolicy">&nbsp 위의 개인정보 수집 및 이용에 대한 안내에 동의합니다.</label>
 			</div>
 			<br>
 			<br>
