--- a/src/main/resources/templates/adminpage/findPassword.html
+++ b/src/main/resources/templates/adminpage/findPassword.html
@@ -2,17 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>관리자 비밀번호 찾기 폼</title>
+<script defer="defer" src="/js/admin/findPw"></script>
 </head>
 <body>
-	<header th:include="/adminheaderNav"></header>
+	<header th:include="/adminpage/adminheaderNav"></header>
 	<main>
 		<h1>비밀번호 찾기</h1>
-		<form>
-			<div>
+		<form name="adminFindPw" action="/adminpage/findPassword.do" method="post" class=mt-5"">
+			<div class="mb-3 row">
 				<h3>아이디</h3>
-				<input name="" type="text" class="" id="" placeholder="">
-				<label for="" class="">아이디를 입력해주세요</label>
+				<label for="col-sm-2 col-form-label" class="">아이디를 입력해주세요</label>
+				<div>
+					<input name="adminId" type="text" class="form-control" id="" placeholder="">
+					<div class="valid-feedback">
+						존재하는 아이디 입니다.
+					</div>
+					<div class="valid-feedback" id="adminIdInvalid">
+						존재하지 않는 아이디 입니다.
+					</div>
+				</div>
 			</div>
 			<div>
 				<h3>이름</h3>
