--- a/src/main/resources/templates/adminpage/loginpage.html
+++ b/src/main/resources/templates/adminpage/loginpage.html
@@ -60,7 +60,7 @@
 				<input class="box3" type="submit" value="로그인">
 			</form>
 			<div class="links">
-				<a href="/findPassword.do">비밀번호 찾기</a>
+				<a href="/adminpage/findPassword.do">비밀번호 찾기</a>
 			</div>
 		</div>
 	</main>
