--- a/src/main/resources/templates/signup/joinPage3.html
+++ b/src/main/resources/templates/signup/joinPage3.html
@@ -19,17 +19,19 @@
 
 			<p class="wel">JB 항공에 오신 것을 환영합니다. </p>
 				<br>
+				<br>
 				<img class="welimg" src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbEpbdY%2FbtrO32vKwAT%2FzQUIEgm3fCHPaDZ3MKvdk0%2Fimg.png">
 				<br>
 				<br>
 				<br>
-				<br>
-				<th:block th:if="${session.loginUser==null}">
+				<th:block th:if="${session.signupDto==null}">
 				     	<h3>세션 X</h3>
 	  			</th:block>
 				<th:block th:unless="${session.signupDto==null}">
 				<p  id="result"><strong th:text="${session.signupDto.ctName}"></strong> (<strong  th:text="${session.signupDto.ctId}"></strong>)님의
 				<br>회원가입이 완료 되었습니다.</p>
+				<br/>
+			
 				</th:block>
 				<hr class="style-seven" />
 				<div class="welp">	로그인 후 JB항공 서비스를 이용할 수 있습니다.</div>
