--- a/src/main/resources/static/css/headerNav.css
+++ b/src/main/resources/static/css/headerNav.css
@@ -2,13 +2,9 @@ nav {
     width: 1100px;
     margin: auto;
 }
-nav > div {
+.logo, .gnb, .lnb{
     height: 80px;
     line-height: 80px;
-}
-nav > div > a {
-    text-decoration: none;
-    color: #222;
 }
 .logo {
     float: left;
@@ -20,16 +16,24 @@ nav > div > a {
     display: inline-block;
     text-align: center;
 }
-.gnb a {
-    margin: 40px;
-}
 .lnb {
     float: right;
     width: 333px;
     text-align: center;
 }
+.logo a {
+    text-decoration: none;
+    color: #222;
+}
+.gnb a {
+    margin: 40px;
+    text-decoration: none;
+    color: #222;
+}
 .lnb a {
     margin: 8px;
+    text-decoration: none;
+    color: #222;
 }
 
 
