--- a/src/main/resources/templates/adminpage/reservationManagement.html
+++ b/src/main/resources/templates/adminpage/reservationManagement.html
@@ -31,22 +31,9 @@
         </thead>
         <th:block th:include="/adminpage/reservationManagementList"></th:block>
     </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
+    <nav aria-label="Page navigation example" th:include="/adminpage/reservationPagingNav">
     </nav>
-
+<!--    <p th:text="${reservation}"></p>-->
     <h1>지난 예약 목록</h1>
     <table class="table table-hover mx-auto border-dark" style="text-align: center;">
         <thead>
@@ -67,25 +54,11 @@
         </thead>
         <th:block th:include="/adminpage/reservationManagementAfterList"></th:block>
     </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
-    </nav>
+
     <div class="mb-3" style="max-width: 300px;">
         <div class="input-group">
             <label class="input-group-text">총 예약 개수</label>
-            <input class="form-control text-end" type="text" value="4" readonly>
+            <input class="form-control text-end" type="text" th:value="${reservation.total}" readonly>
             <label class="input-group-text">개</label>
         </div>
         <!--<div class="input-group mt-3">
