예약진행중 객체 생성

--- a/src/main/resources/templates/reservation/baggage.html
+++ b/src/main/resources/templates/reservation/baggage.html
@@ -145,7 +145,7 @@
 			</div>
 		</div>
 	</div>
-	<footer id="r_footer" th:include="/reservation/r_footer"></footer>
+	<footer id="r_footer" th:include="/reservation/rFooter"></footer>
 	<footer id="footer" th:include="/footerNav"></footer>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="jquery.min.js"></script>
