--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -272,7 +272,7 @@
 			</div>
 		</div>
 	</div>
-	<footer id="r_footer" th:include="/reservation/r_footer"></footer>
+	<footer id="r_footer" th:include="/reservation/rFooter"></footer>
 	<footer id="footer" th:include="/footerNav"></footer>
 
 
