--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -17,8 +17,8 @@
 			</div>
 
 			<div class="passenger_info">
-				<form action="/passenger/pList.do">
-				<!-- <input type="hidden" th:name="customerNo" th:value="${session.loginUser.userId}"> -->
+				<form action="/reservation/passenger_list.do" method="post">
+					<!-- <input type="hidden" th:name="customerNo" th:value="${session.loginUser.userId}"> -->
 					<div class="p_info-list">
 						<ul>
 							<li class="p_list on">
@@ -40,13 +40,13 @@
 											<table>
 												<tr class="detail_li">
 													<th class="type">성별 <span class="info-text">*</span></th>
-													<td class="input_wrap"><input type="radio" name="gender"> 남 <input type="radio" name="gender"> 여</td>
+													<td class="input_wrap"><input type="radio" name="pgGender"> 남 <input type="radio" name="pgGender"> 여</td>
 												</tr>
 												<tr class="detail_li">
 													<th class="type">국적</th>
 													<td class="input_wrap">
 														<div>
-															<input type="text" value="대한민국" readonly>
+															<input type="text" name="pgCountry" th:value="대한민국" readonly>
 															<button class="btn" type="button">국적 검색</button>
 														</div>
 													</td>
@@ -55,8 +55,8 @@
 													<th class="type">이름 <span class="info-text">*</span></th>
 													<td class="input_wrap">
 														<div>
-															<input class="btn" name="lastname" type="text" maxlength="30" placeholder="성(Last Name)">
-															<input class="btn" name="firstname" type="text" maxlength="30" placeholder="이름(First Name)">
+															<input class="btn" name="pgLastName" type="text" maxlength="30" placeholder="성(Last Name)">
+															<input class="btn" name="pgFirstName" type="text" maxlength="30" placeholder="이름(First Name)">
 														</div>
 													</td>
 												</tr>
@@ -124,7 +124,7 @@
 													<th class="type">이메일 <span class="info-text">*</span></th>
 													<td class="input_wrap">
 														<div>
-															<input class="btn w490" name="email" type="email" maxlength="30" placeholder="이메일 주소">
+															<input class="btn w490" name="rvEmail" type="email" maxlength="30" placeholder="이메일 주소">
 														</div>
 													</td>
 												</tr>
@@ -135,14 +135,14 @@
 															<select class="country_code">
 																<option value="82">대한민국(+82)</option>
 															</select>
-															<input class="btn" name="phone" type="text" maxlength="30" placeholder="휴대전화 번호 입력">
+															<input class="btn" name="rvPhone" type="text" maxlength="30" placeholder="휴대전화 번호 입력">
 														</div>
 													</td>
 												</tr>
 											</table>
 										</div>
 										<div class="next_btn_area">
-											<button class="nextBtn" type="button">다음 승객 입력</button>
+											<button class="nextBtn" type="submit">다음 승객 입력</button>
 										</div>
 									</div>
 								</div>
@@ -158,13 +158,13 @@
 											<table>
 												<tr class="detail_li">
 													<th class="type">성별 <span class="info-text">*</span></th>
-													<td class="input_wrap"><input type="radio" name="gender"> 남 <input type="radio" name="gender"> 여</td>
+													<td class="input_wrap"><input type="radio" name="pgGender"> 남 <input type="radio" name="pgGender"> 여</td>
 												</tr>
 												<tr class="detail_li">
 													<th class="type">국적</th>
 													<td class="input_wrap">
 														<div>
-															<input type="text" value="대한민국" readonly>
+															<input type="text" name="pgCountry" value="대한민국" readonly>
 															<button class="btn" type="button">국적 검색</button>
 														</div>
 													</td>
@@ -173,8 +173,8 @@
 													<th class="type">이름 <span class="info-text">*</span></th>
 													<td class="input_wrap">
 														<div>
-															<input class="btn" name="lastname" type="text" maxlength="30" placeholder="성(Last Name)">
-															<input class="btn" name="firstname" type="text" maxlength="30" placeholder="이름(First Name)">
+															<input class="btn" name="pgLastName" type="text" maxlength="30" placeholder="성(Last Name)">
+															<input class="btn" name="pgFirstName" type="text" maxlength="30" placeholder="이름(First Name)">
 														</div>
 													</td>
 												</tr>
@@ -255,6 +255,12 @@
 				<ul class="ul_dot">
 					<li>나의 반려동물 이름을 입력하시면 출발 당일 반려동물용 기념 탑승권을 발급해드립니다.</li>
 				</ul>
+				<div style="height: 50px; margin-top: 20px;">
+					<label>
+						반려동물 탑승 여부
+						<input type="checkbox" name="rvPetAccompanying">
+					</label>
+				</div>
 			</div>
 			<div class="notice_wrap on">
 				<a class="tit" th:onclick="toggle(this)">
