--- a/src/main/resources/templates/login/findId.html
+++ b/src/main/resources/templates/login/findId.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <script defer="defer" src="/js/find/findId.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <head>
 <meta charset="UTF-8">
 <title>아이디 찾기 페이지</title>
@@ -18,13 +19,13 @@
 			<div class="input-group input-group-lg mb-3">
 				<span class="input-group-text" id="inputEmail">이메일</span>
 			  	<input name="ctEmail" type="email" class="form-control" placeholder="이메일을 입력하세요" id="inputEmail" >
-			  	<button onclick="btnOtp()" type="button" class="btn btn-outline-secondary" name="btnOtp" id="btnOtp">인증번호 받기</button>
+			  	<button onClick="sendbtnOtp()" type="button" class="btn btn-outline-secondary" name="btnOtp" id="btnOtp">인증번호받기</button>
 			</div>
 			<div class="input-group mb-3">
 				<input type="text" class="form-control" name="otpNum" id="otpNum" placeholder="인증번호 입력" disabled>
 			</div>
 			<div class="d-grid gap-2 col-6 mx-auto">
-				<button type="submit" class="btn btn-primary mt-4">아이디 찾기</button>
+				<button type="button" class="btn btn-primary mt-4">아이디 찾기</button>
 			</div>
 		</form>
 	</main>
